# markdown-it-rubyfied-sample

./: CODE_OF_CONDUCT.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  markdown_it_rubyfied_sample.gemspec
.github/workflows/: main.yml
bench/: Gemfile  bench.rb
bench/fixtures/: highlight.md
ext/markdown_it_rubyfied_sample/: Cargo.toml  extconf.rb
ext/markdown_it_rubyfied_sample/src/: lib.rs
lib/: markdown_it_rubyfied_sample.rb
lib/markdown_it_rubyfied_sample/: version.rb
sig/: markdown_it_rubyfied_sample.rbs
spec/: markdown_it_rubyfied_sample_spec.rb  spec_helper.rb
