[package]
name = "markdown_it_rubyfied_sample"
version = "0.1.0"
edition = "2021"
authors = ["Koji Onishi <fursich0@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]
doc = false

[dependencies]
magnus = { version = "0.6.2" }
markdown-it     = ">= 0.6"
url             = ">= 2.5"
